; ModuleID = '/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_ioctl.c_linux_to_bsd_v4l_buffer.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/compat/linux/extr_linux_ioctl.c_linux_to_bsd_v4l_buffer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.l_video_buffer = type { i32, i32, i32, i32, i32 }
%struct.video_buffer = type { i32, i32, i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.l_video_buffer*, %struct.video_buffer*)* @linux_to_bsd_v4l_buffer to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @linux_to_bsd_v4l_buffer(%struct.l_video_buffer* %0, %struct.video_buffer* %1) #0 {
  %3 = alloca %struct.l_video_buffer*, align 8
  %4 = alloca %struct.video_buffer*, align 8
  store %struct.l_video_buffer* %0, %struct.l_video_buffer** %3, align 8
  store %struct.video_buffer* %1, %struct.video_buffer** %4, align 8
  %5 = load %struct.l_video_buffer*, %struct.l_video_buffer** %3, align 8
  %6 = getelementptr inbounds %struct.l_video_buffer, %struct.l_video_buffer* %5, i32 0, i32 4
  %7 = load i32, i32* %6, align 4
  %8 = call i32 @PTRIN(i32 %7)
  %9 = load %struct.video_buffer*, %struct.video_buffer** %4, align 8
  %10 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %9, i32 0, i32 4
  store i32 %8, i32* %10, align 4
  %11 = load %struct.l_video_buffer*, %struct.l_video_buffer** %3, align 8
  %12 = getelementptr inbounds %struct.l_video_buffer, %struct.l_video_buffer* %11, i32 0, i32 3
  %13 = load i32, i32* %12, align 4
  %14 = load %struct.video_buffer*, %struct.video_buffer** %4, align 8
  %15 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %14, i32 0, i32 3
  store i32 %13, i32* %15, align 4
  %16 = load %struct.l_video_buffer*, %struct.l_video_buffer** %3, align 8
  %17 = getelementptr inbounds %struct.l_video_buffer, %struct.l_video_buffer* %16, i32 0, i32 2
  %18 = load i32, i32* %17, align 4
  %19 = load %struct.video_buffer*, %struct.video_buffer** %4, align 8
  %20 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %19, i32 0, i32 2
  store i32 %18, i32* %20, align 4
  %21 = load %struct.l_video_buffer*, %struct.l_video_buffer** %3, align 8
  %22 = getelementptr inbounds %struct.l_video_buffer, %struct.l_video_buffer* %21, i32 0, i32 1
  %23 = load i32, i32* %22, align 4
  %24 = load %struct.video_buffer*, %struct.video_buffer** %4, align 8
  %25 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %24, i32 0, i32 1
  store i32 %23, i32* %25, align 4
  %26 = load %struct.l_video_buffer*, %struct.l_video_buffer** %3, align 8
  %27 = getelementptr inbounds %struct.l_video_buffer, %struct.l_video_buffer* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = load %struct.video_buffer*, %struct.video_buffer** %4, align 8
  %30 = getelementptr inbounds %struct.video_buffer, %struct.video_buffer* %29, i32 0, i32 0
  store i32 %28, i32* %30, align 4
  ret i32 0
}

declare dso_local i32 @PTRIN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
